# neorogue

./: .gitignore  LICENSE  Makefile  README.md  configure  create_meson_build_dir.bat  create_meson_build_dir.sh  meson.build  run_rogue_forever.bat  run_rogue_forever.sh
.github/workflows/: makefile.yml
examples/: echo_server_test_client.cpp  get_filenames_from_texturepacker_json.txt  varying_amount_of_function_parameters.txt
experiments/vulkan/: Makefile
graphics_development/tilemaps/: dc-dngn-collection.tsx
include/: Assets.hpp  Constants.hpp  GraphicsUtil.hpp  Json.hpp  Level.hpp  Log.hpp  Map.hpp  Sdlw.hpp  Spritesheet.hpp  TextureSpritesheet.hpp  Tile.hpp  tile.hpp
include/common/: CommonConstants.hpp  DebugUtil.hpp  Message.hpp  MessageFileTransfer.hpp  MessageFileTransferControl.hpp  MessageHandshake.hpp
include/game/: Assets.hpp  Constants.hpp  GraphicsUtil.hpp  Json.hpp  Map.hpp
levels/: map2_16x16.tmj  test_level1.txt
scripts/: create_spritesheets.sh  download_assets.sh  install_deps.ps1  install_deps.psm1  install_deps.sh  install_gtest.sh  install_tools.ps1  install_tools.sh
src/: GraphicsUtil.cpp  Json.cpp  Level.cpp  Log.cpp  Map.cpp  Sdlw.cpp  Spritesheet.cpp  TextureSpritesheet.cpp  Tile.cpp  main.cpp  tile.cpp
src/common/: DebugUtil.cpp  Message.cpp  MessageFileTransfer.cpp  MessageFileTransferControl.cpp  MessageHandshake.cpp
src/game/: GraphicsUtil.cpp  Json.cpp  Level.cpp  Log.cpp  Map.cpp  Sdlw.cpp  Spritesheet.cpp  Tile.cpp  main.cpp
src/server/asset/: main.cpp
src/server/content/: main.cpp
src/server_route/: echo_server.cpp
test/: TestJson.cpp  TestLevel.cpp  TestMap.cpp  TestSpritesheet.cpp  main.c  main.cpp
test_data/: UNUSED.json  dc-dngn-collection-spritesheet.tmj  dc-dngn.json  dc-misc-collection-spritesheet.tmj  dc-misc.json  dc-mon-collection-spritesheet.tmj  dc-mon.json  effect-collection-spritesheet.tmj  effect.json  gui-collection-spritesheet.tmj  gui.json  item-collection-spritesheet.tmj  item.json  map1_300x200.tmj  map2_16x16_redone.tmj  player-collection-spritesheet.tmj  player.json  spells-collection-spritesheet.tmj  spells.json
